# wildpose

./: .gitignore  CMakeLists.txt  README.md  nodelets.xml
GPUCameraSample_Arm64/release/: libfastvideo_denoise.so.1.0.0.0.0170001  libfastvideo_denoise.so.2  libfastvideo_sdk.so.18
build-GPUCameraSample-Desktop-Debug/: Makefile
build-GPUCameraSample-Desktop-Debug/CameraSample/: Makefile  moc_AppSettings.cpp  moc_AsyncFileWriter.cpp  moc_CUDAProcessorBase.cpp  moc_CameraSetupWidget.cpp  moc_DenoiseController.cpp  moc_FrameBuffer.cpp  moc_GLImageViewer.cpp  moc_GPUCameraBase.cpp  moc_GtGWidget.cpp  moc_MainWindow.cpp  moc_RTSPStreamerServer.cpp  moc_RawProcessor.cpp  moc_TcpClient.cpp  moc_XimeaCamera.cpp  moc_avfilewriter.cpp  moc_camerastatistics.cpp  qrc_Resorces.cpp  ui_CameraSetupWidget.h  ui_DenoiseController.h  ui_MainWindow.h  ui_camerastatistics.h
build-GPUCameraSample-Desktop-Debug/RtspPlayer/: Makefile  moc_DialogOpenServer.cpp  moc_GLImageViewer.cpp  moc_GtGWidget.cpp  moc_MainWindow.cpp  moc_RTSPServer.cpp  qrc_resorces.cpp  ui_DialogOpenServer.h  ui_MainWindow.h
config/: example_cam_config.yaml
include/libtiff/: Makefile  config.status  libtiff-4.pc  libtool
include/sdk_core/: CMakeLists.txt
include/xiAPI/: jpeg.h  m3Identify.h  sensorsIdentify.h  versions.h  xiAPI_tiff.cpp  xiAPI_tiff.h  xiApi.h
include/xiAPIplus/: xiAPIplus_parameters.cpp  xiAPIplus_tiff.cpp  (+1 more)
launch/: example_cam.launch
msg/: XiImageInfo.msg
python/: image_load.py
src/: lidar.h  main.cpp  rotary_encoder.cpp  rotary_encoder.h  ximea_ros_cam.cpp  ximea_ros_cam_node.cpp
(+718 files in other folders)
